Switch to PostgreSQL for Vercel deployment

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,7 @@ TWILIO_PHONE_NUMBER=
 # Cron (secure secret for Vercel Cron / external scheduler)
 CRON_SECRET=generate-with-openssl-rand-base64-32
 
-# Database
+# Database (local: SQLite | production: use Vercel Postgres URL)
+# Local:  DATABASE_URL="file:./dev.db"
+# Vercel: DATABASE_URL="postgresql://..." (from Vercel Postgres)
 DATABASE_URL="file:./dev.db"
