--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "crons": [
-    {
-      "path": "/api/cron/check-events",
-      "schedule": "*/5 * * * *"
-    }
-  ]
+  "$schema": "https://openapi.vercel.sh/vercel.json"
 }
