--- a/.env.example
+++ b/.env.example
@@ -2,19 +2,17 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=generate-with-openssl-rand-base64-32
 
-# Google OAuth (from Google Cloud Console)
+# Google OAuth (from Google Cloud Console → APIs & Services → Credentials)
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-# Twilio
+# Twilio (from Twilio Console)
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
-TWILIO_PHONE_NUMBER=
+TWILIO_PHONE_NUMBER=+1234567890
 
-# Cron (secure secret for Vercel Cron / external scheduler)
+# Cron (secure the /api/cron/check-events endpoint)
 CRON_SECRET=generate-with-openssl-rand-base64-32
 
-# Database (local: SQLite | production: use Vercel Postgres URL)
-# Local:  DATABASE_URL="file:./dev.db"
-# Vercel: DATABASE_URL="postgresql://..." (from Vercel Postgres)
-DATABASE_URL="file:./dev.db"
+# Database (PostgreSQL — Neon recommended for Vercel)
+DATABASE_URL="postgresql://user:password@host/dbname?sslmode=require"
