--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^12.34.0",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.460.0",
     "next": "^15.0.0",
