--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:studio": "npx prisma studio"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.0.0",
     "@tanstack/react-query": "^5.90.21",
@@ -26,6 +27,8 @@
     "next-auth": "^4.24.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.71.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.0",
     "twilio": "^5.0.0",
     "zod": "^3.23.0"
